--- a/relinksys/web/src/app/sale/bill-list/bill-list.component.html
+++ b/relinksys/web/src/app/sale/bill-list/bill-list.component.html
@@ -953,7 +953,7 @@
                       </div>
                     
 
-                        <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0" *ngIf="Insurance.PaymentStatus == 'Applied'">
+                        <div class="col-xl-3 col-lg-4 col-md-6 col-6 mb-0" >
                       <button *ngIf="this.approved == true" class="me-3" type="button" mat-raised-button color="primary"
                         (click)="applyInsuranceQuotation()">Apply</button>
                      
