--- a/relinksys/web/src/app/common/common.component.html
+++ b/relinksys/web/src/app/common/common.component.html
@@ -162,14 +162,14 @@
           </div>
           <!-- companyadmin end company payment -->
           <!-- companyadmin  company payment start -->
-          <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown" (click)="myFunctionS('Ls')">
+          <!-- <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown" (click)="myFunctionS('Ls')">
             <a class="dropBtn" data-target="#collapseExampleLs" >E-commerce <i class="fa fa-caret-down"
                 aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExampleLs">
               <a  href="javascript:void(0)" [routerLink]="['/ecommerce/product']" id="collapseExampleLs">Product</a>
             
             </div>
-          </div>
+          </div> -->
           <!-- companyadmin end company payment -->
           <!-- companyadmin  report start -->
           <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown" (click)="myFunctionS('H')">
